@@ -117,6 +117,7 @@ main (int   argc,
       char *argv[])
 {
   g_type_init ();
+  g_thread_init (0);
   g_test_init (&argc, &argv, NULL);
 
   g_test_add_func ("/g-file-info/test_g_file_info", test_g_file_info);
