@@ -507,6 +507,7 @@ main (int   argc,
       char *argv[])
 {
   g_type_init ();
+  g_thread_init (0);
   g_test_init (&argc, &argv, NULL);
   
   
